# claudepot-app

./: .cc-suite.md  .gitignore  .mcp.json  .tokeignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  grill-report-2026-05-15.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tokens.proposed.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
crates/claudepot-cli/: Cargo.toml
crates/claudepot-cli/examples/: keyring-probe.rs
crates/claudepot-cli/macos/: entitlements.plist
crates/claudepot-cli/src/: clipboard.rs  main.rs  output.rs  time_fmt.rs
crates/claudepot-cli/src/commands/: account.rs  activity.rs  agent.rs  automation.rs  cli_ops.rs  codex.rs  desktop_ops.rs  doctor.rs  lesson.rs  logs.rs  mcp.rs  memory.rs  mod.rs  project.rs  project_migrate.rs  session.rs  settings.rs  status.rs  update.rs  usage.rs
crates/claudepot-cli/tests/: agent_draft_cli.rs  codex_data_dir_cli.rs  mcp_memory_cli.rs  session_export_cli.rs  session_prune_cli.rs  session_search_cli.rs  session_slim_cli.rs
crates/claudepot-core/: Cargo.toml
crates/claudepot-core/src/: account.rs  account_tests.rs  account_verification.rs  agent.rs  artifact_toggle.rs  attribution_settings.rs  auto_dream.rs  blob.rs  breaker.rs  cc_daemon.rs  crash_reports.rs  db_housekeeping.rs  db_pragmas.rs  desktop_identity.rs  desktop_lock.rs  diagnostic_logging.rs  error.rs  fs_utils.rs  host_activate.rs  json_store.rs  launcher.rs  lib.rs  log_housekeeping.rs  main_thread.rs  mcp_probe.rs  mcp_snippet.rs  memory_health.rs  memory_log.rs  memory_view.rs  migrations.rs  notification_log.rs  notifications.rs  onboard.rs  path_env.rs  path_utils.rs  paths.rs  pricing.rs  proc_utils.rs  project.rs  project_config_rewrite.rs  (+54 more)
crates/claudepot-core/src/activity/: backfill.rs  card.rs  classifier.rs  classifier_tests.rs  index.rs  index_tests.rs  mod.rs  templates.rs
crates/claudepot-core/src/agent/: cron.rs  draft.rs  env.rs  error.rs  install.rs  install_gate.rs  prerun.rs  run.rs  shim.rs  slug.rs  store.rs  templates.rs  types.rs
crates/claudepot-core/src/artifact_lifecycle/: disable.rs  discover.rs  error.rs  mod.rs  paths.rs  scope_lock.rs  trash.rs  trash_io.rs  trash_listing.rs
crates/claudepot-core/src/artifact_usage/: extract.rs  extract_helpers.rs  mod.rs  model.rs  schema.rs  store.rs
crates/claudepot-core/src/automations/: cron.rs  env.rs  error.rs  install.rs  mod.rs  prerun.rs  run.rs  shim.rs  slug.rs  store.rs  types.rs
crates/claudepot-core/src/cc_doctor/: compose.rs  dev_alert.rs  mod.rs  parse_failures.rs  probes.rs  scrape.rs
crates/claudepot-core/src/cc_tips/: catalog.rs  categories.rs  error.rs  extract.rs  history.rs  mod.rs  triggers.rs  walker.rs
crates/claudepot-core/src/cli_backend/: claude_json.rs  credfile.rs  error.rs  keychain.rs  mod.rs  secret_file.rs  storage.rs  swap.rs  swap_tests.rs  wsl_probe.rs
crates/claudepot-core/src/codex_session/: error.rs  mod.rs  parser.rs  tests.rs  types.rs
crates/claudepot-core/src/config_view/: diff.rs  discover.rs  effective_io.rs  effective_mcp.rs  effective_settings.rs  error.rs  launcher.rs  mask.rs  memory_include.rs  memory_other.rs  merge.rs  mod.rs  model.rs  parse.rs  plugin_base.rs  policy.rs  provenance.rs  redacted_claude_json.rs  search.rs  service.rs  watch.rs
crates/claudepot-core/src/desktop_backend/: crypto.rs  error.rs  macos.rs  mod.rs  swap.rs  swap_tests.rs  token_cache.rs  windows.rs
crates/claudepot-core/src/env_vault/: env_file.rs  error.rs  mod.rs  store.rs
crates/claudepot-core/src/github_pr/: cache.rs  cli.rs  mod.rs  remote.rs
crates/claudepot-core/src/keys/: error.rs  format.rs  keychain.rs  mod.rs  probe.rs  store.rs  types.rs
crates/claudepot-core/src/migrate/: apply.rs  bundle.rs  conflicts.rs  crypto.rs  error.rs  file_history.rs  global.rs  manifest.rs  mod.rs  nfc.rs  plan.rs  quarantine.rs  rewrite.rs  state.rs  trust.rs  worktree.rs
crates/claudepot-core/src/oauth/: beta_header.rs  error.rs  mod.rs  profile.rs  refresh.rs  usage.rs
crates/claudepot-core/src/permission/: eval.rs  grants.rs  mod.rs  mode.rs  settings.rs  store.rs
crates/claudepot-core/src/pricing/: mod.rs  service.rs  tier.rs
crates/claudepot-core/src/project/: mod.rs  (+13 more)
crates/claudepot-core/tests/: activity_e2e.rs  agent_e2e.rs  automation_e2e.rs  cc_tips_real.rs  keychain_roundtrip.rs  signal_handler_subprocess.rs  templates_e2e.rs  templates_real_llm.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_event_orchestrator.rs  app_menu.rs  cc_doctor_watcher.rs  commands.rs  commands_account.rs  commands_activity.rs  commands_activity_cards.rs  commands_artifact_lifecycle.rs  commands_automations.rs  commands_cli.rs  commands_config.rs  commands_config_types.rs  commands_desktop.rs  commands_keys.rs  commands_memory.rs  commands_memory_health.rs  commands_migrate.rs  commands_notification.rs  commands_preferences.rs  commands_pricing.rs  commands_project.rs  commands_protected.rs  commands_repair.rs  commands_routes.rs  commands_service_status.rs  commands_session_index.rs  commands_session_move.rs  commands_session_prune.rs  commands_session_share.rs  commands_templates.rs  commands_updates.rs  commands_usage_local.rs  config_dto.rs  config_watch.rs  config_watch_types.rs  dock_icon.rs  dto.rs  dto_account.rs  dto_activity.rs  dto_activity_cards.rs  (+47 more)
src-tauri/src/commands/: account.rs  agents.rs  artifact_tool.rs  artifact_usage.rs  attribution.rs  auto_dream.rs  cc_daemon.rs  cc_doctor.rs  cc_tips.rs  cli.rs  config.rs  config_types.rs  desktop.rs  env_secret.rs  keys.rs  mod.rs  notification.rs  permission.rs  preferences.rs  project.rs  protected.rs  release_update.rs  repair.rs  rotation.rs  routes.rs  service_status.rs  session_index.rs  session_move.rs  session_prune.rs  session_share.rs  shared_memory.rs  templates.rs  thinking_toggle.rs  updates.rs  usage_local.rs
src-tauri/tests/: agents_install_smoke.rs
(+1442 files in other folders)
