[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/claudepot-core",
    "crates/claudepot-cli",
]

[workspace.package]
version = "0.0.3"
edition = "2021"
authors = ["xiaolai"]
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto (service-name hashing only)
sha2 = "0.10"
hex = "0.4"

# Keychain (Claudepot's own secrets — NOT for CC's Keychain item)
keyring = "3"

# Async trait (for platform trait objects)
async-trait = "0.1"

# File operations
tempfile = "3"
filetime = "0.2"

# System info
whoami = "1"

# Process inspection
sysinfo = "0.32"

# SQLite (account registry)
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform (file locking)
libc = "0.2"

# Unicode normalization (NFC for cross-platform path consistency)
unicode-normalization = "0.1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"

# Parallel data processing (per-file JSONL rewriting in project rename, §4.2 P6).
# Chosen over tokio spawn_blocking for CPU-bound JSON parsing; thread pool
# bounded by num_cpus automatically.
rayon = "1.10"
num_cpus = "1.16"

# Redaction (session_live::redact) — one compiled regex in a `once_cell`
# static. No runtime pattern mutation; `regex` is Cargo-cached across the
# workspace and already transitively pulled in by tracing-subscriber, so
# the marginal cost is small.
regex = "1"
once_cell = "1"

# The `notify` filesystem-watcher crate was reserved for an event-driven
# tail path, but the shipped runtime is pure 500ms polling (sub-second
# latency already meets the plan's M1 target). Dependency removed on
# audit to avoid carrying an unused workspace dep — re-add when the
# watcher-backed path actually lands.

# ─── Desktop-identity crypto (Phase 2) ──────────────────────────────────
# Chromium OSCrypt / Electron safeStorage envelope:
#   macOS  — PBKDF2-HMAC-SHA1 (1003 iters) + AES-128-CBC (fixed-IV, PKCS#7)
#   Windows — DPAPI CryptUnprotectData → 32-byte key + AES-256-GCM
# Platform-gated so macOS builds don't pull aes-gcm and Windows builds
# don't pull cbc/pbkdf2/hmac-sha1. `base64` + `aes` are cross-platform.
base64 = "0.22"
aes = "0.8"
# macOS-only
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac", "sha1"] }
hmac = "0.12"
sha1 = "0.10"
cbc = { version = "0.1", features = ["alloc"] }
# Windows-only
aes-gcm = "0.10"
# Direct DPAPI (CryptUnprotectData) bindings for Phase 6. Only the
# two feature groups we actually use — keeping the compile surface
# small so non-DPAPI Windows builds don't pay for unused bindings.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }

# Cross-process advisory locking for Desktop mutators (CLI + GUI run as
# separate processes; the Tauri-side async Mutex is insufficient alone).
fs2 = "0.4"

# ─── Build profiles ──────────────────────────────────────────────────────
# Release: thin-LTO + single codegen unit. Cuts binary size and — more
# importantly for startup — lets rustc inline across crates, which the
# hot Tauri command path benefits from. `opt-level = 3` is the default
# for release; we restate it to keep the profile self-documenting.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Dev: turn on some optimisation for our deps (they never change in a
# hot loop) but keep our own crates un-optimised so incremental rebuilds
# stay fast. Speeds up `pnpm tauri dev` cold starts noticeably — the
# first launch still pays the compile cost, but subsequent runs benefit
# because dependencies are already optimised.
[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2
