[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/claudepot-core",
    "crates/claudepot-cli",
    "crates/xtask",
]

[workspace.package]
version = "0.0.15"
edition = "2021"
authors = ["xiaolai"]
license = "ISC"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto (service-name hashing only)
sha2 = "0.10"
hex = "0.4"

# Keychain (Claudepot's own secrets — NOT for CC's Keychain item)
keyring = "3"

# Async trait (for platform trait objects)
async-trait = "0.1"

# File operations
tempfile = "3"
filetime = "0.2"

# System info
whoami = "1"

# Process inspection
sysinfo = "0.32"

# SQLite (account registry)
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform (file locking)
libc = "0.2"

# Unicode normalization (NFC for cross-platform path consistency)
unicode-normalization = "0.1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"

# Parallel data processing (per-file JSONL rewriting in project rename, §4.2 P6).
# Chosen over tokio spawn_blocking for CPU-bound JSON parsing; thread pool
# bounded by num_cpus automatically.
rayon = "1.10"
num_cpus = "1.16"

# Redaction (session_live::redact) — one compiled regex in a `once_cell`
# static. No runtime pattern mutation; `regex` is Cargo-cached across the
# workspace and already transitively pulled in by tracing-subscriber, so
# the marginal cost is small.
regex = "1"
once_cell = "1"

# parking_lot RwLock — used by `claudepot-core::config_view::service`
# (D-1, ConfigScanService). Sync, no poisoning, held only briefly across
# tree commits / snapshots; chosen over `tokio::sync::RwLock` so the
# read-side `with_tree` accessor stays sync and callers (preview,
# search-start, watcher) don't have to be `async`.
parking_lot = "0.12"

# Lock-free atomic Arc swap — used by `claudepot-core::pricing::service`
# (D-3, PricingCacheService) for the read-mostly cached `PriceTable`
# slot. Readers take an `Arc<PriceTable>` snapshot without contending
# on a Mutex/RwLock; the singleflight refresh path uses a separate
# `tokio::sync::Mutex` + `tokio::sync::OnceCell` for join semantics.
# Tiny crate (~250 KB compile cost), no_std-friendly, used in one place.
arc-swap = "1"

# Filesystem watcher — used by the Config section's real-FS watcher
# (src-tauri/src/config_watch.rs) to deliver incremental tree patches
# without polling. `notify-debouncer-mini` gives us coalesced events
# out of the box, which the core watch state machine still re-checks
# via scan_until_stable for correctness.
notify = "6"
notify-debouncer-mini = "0.4"

# ─── Desktop-identity crypto (Phase 2) ──────────────────────────────────
# Chromium OSCrypt / Electron safeStorage envelope:
#   macOS  — PBKDF2-HMAC-SHA1 (1003 iters) + AES-128-CBC (fixed-IV, PKCS#7)
#   Windows — DPAPI CryptUnprotectData → 32-byte key + AES-256-GCM
# Platform-gated so macOS builds don't pull aes-gcm and Windows builds
# don't pull cbc/pbkdf2/hmac-sha1. `base64` + `aes` are cross-platform.
base64 = "0.22"
aes = "0.8"
# macOS-only
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac", "sha1"] }
hmac = "0.12"
sha1 = "0.10"
cbc = { version = "0.1", features = ["alloc"] }
# Windows-only
aes-gcm = "0.10"
# Direct DPAPI (CryptUnprotectData) bindings for Phase 6. Only the
# two feature groups we actually use — keeping the compile surface
# small so non-DPAPI Windows builds don't pay for unused bindings.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }

# Cross-process advisory locking for Desktop mutators (CLI + GUI run as
# separate processes; the Tauri-side async Mutex is insufficient alone).
fs2 = "0.4"

# OS-native Trash so orphan discard is reversible (NSFileManager on macOS,
# IFileOperation on Windows, XDG trash on Linux). Chosen over manual
# platform branches so we stay out of undelete semantics ourselves.
trash = "5"

# Cross-platform "is path A the same file as path B?" — used by the
# project module's same_file_identity helper. Already in our dep tree
# transitively via walkdir; pulling it in as a direct dep lets us drop
# the nightly-only std::os::windows::fs::MetadataExt::file_index path
# (`windows_by_handle` is still unstable as of Rust 1.83) and avoids
# branching in user code.
same-file = "1"

# Project-migrate bundle format (`*.claudepot.tar.zst`) — see
# `dev-docs/project-migrate-spec.md` §3.
# - `tar` carries Unix mode + symlink shape verbatim and round-trips
#   on Windows via the `tar` crate's path normalization.
# - `zstd` because session JSONL compresses 6–10×.
# Both are pure-Rust at the API surface; `zstd` ships its own zstd-sys C
# library bundled, so no system zstd dependency.
tar = "0.4"
zstd = "0.13"

# Bundle encryption + signing — see `migrate::crypto`.
# - `age` for passphrase-based symmetric encryption (default-on).
#   Pure-Rust, audited X25519/scrypt/ChaCha20-Poly1305.
# - `minisign-verify` for signature verification only on the import
#   path. Bundle signing (the export-side write) uses the `minisign`
#   crate; verification is split out so importers don't need the keygen
#   surface.
age = "0.10"
minisign = "0.7"
minisign-verify = "0.2"

# Secret zeroization — used by the Keys + Settings IPC commands
# (D-5/6/7) to overwrite token bytes after persistence/copy. Drop alone
# is not enough: Rust's `String` deallocator does not scrub. `zeroize`
# guarantees a memset that the optimizer can't elide. Tiny crate, no
# transitive deps beyond a `Drop` derive.
zeroize = "1"

# ─── Build profiles ──────────────────────────────────────────────────────
# Release: thin-LTO + single codegen unit. Cuts binary size and — more
# importantly for startup — lets rustc inline across crates, which the
# hot Tauri command path benefits from. `opt-level = 3` is the default
# for release; we restate it to keep the profile self-documenting.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Dev: turn on some optimisation for our deps (they never change in a
# hot loop) but keep our own crates un-optimised so incremental rebuilds
# stay fast. Speeds up `pnpm tauri dev` cold starts noticeably — the
# first launch still pays the compile cost, but subsequent runs benefit
# because dependencies are already optimised.
[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2
