[package]
name = "claudepot-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Claudepot — Tauri menu bar app"

[lib]
name = "claudepot_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
claudepot-core = { path = "../crates/claudepot-core" }
keyring.workspace = true
tauri = { version = "2", features = [ "tray-icon", "image-png"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri-plugin-mcp-bridge = "0.11"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
# D-5/6/7: Rust-side clipboard write for `key_*_copy`. The raw secret
# never returns to JS — the renderer only sees a `KeyCopyReceiptDto`
# (label + preview + clear-deadline). Self-clear after 30s is also
# scheduled in Rust so the policy lives next to the write.
tauri-plugin-clipboard-manager = "2.3"
zeroize.workspace = true
dirs = { workspace = true }
notify.workspace = true
notify-debouncer-mini.workspace = true

[dev-dependencies]
tempfile.workspace = true
