[package]
name = "claudepot-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Claudepot — Tauri menu bar app"

[lib]
name = "claudepot_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
claudepot-core = { path = "../crates/claudepot-core" }
keyring.workspace = true
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri-plugin-mcp-bridge = "0.11"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
# D-5/6/7: Rust-side clipboard write for `key_*_copy`. The raw secret
# never returns to JS — the renderer only sees a `KeyCopyReceiptDto`
# (label + preview + clear-deadline). Self-clear after 30s is also
# scheduled in Rust so the policy lives next to the write.
tauri-plugin-clipboard-manager = "2.3"
# Auto-update pipeline (Settings → About). Minisign-signed bundles are
# verified at runtime against the pubkey embedded in tauri.conf.json;
# the signing key is only available in CI via TAURI_SIGNING_PRIVATE_KEY.
# `process` ships the `relaunch` IPC the renderer uses after install.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
zeroize.workspace = true
dirs = { workspace = true }
notify.workspace = true
notify-debouncer-mini.workspace = true
# Memory-watch fingerprint comparison (`memory_watch.rs`). sha256 is
# good enough for content-equality dedup; mirrors what `memory_log`
# stores so a process restart can reuse persisted hashes.
sha2.workspace = true
hex.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# Force the macOS application icon at runtime via NSApplication's
# `setApplicationIconImage`. Tauri's runtime only does this in dev
# (search `setApplicationIconImage` in tauri's `app.rs`). Without
# this, prod falls back to the legacy IconServices `.icns` render
# pipeline, which anti-aliases pixel-art icons softly at every
# non-integer downscale. Calling it ourselves at startup mirrors
# dev's pipeline and keeps the Dock icon crisp.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }

[dev-dependencies]
tempfile.workspace = true
