[package]
name = "claudepot-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Claudepot — Tauri menu bar app"

[lib]
name = "claudepot_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
claudepot-core = { path = "../crates/claudepot-core" }
keyring.workspace = true
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
# pr_orchestrator uses an async PrDetector trait so tests can swap in
# a deterministic fake. async-trait is the workspace's chosen polyfill
# for async-in-traits (claudepot-core uses it elsewhere too).
async-trait.workspace = true
# `usage_snapshot::run_tick` wraps each sub-orchestrator in a
# `catch_unwind` so one panicking sub-task cannot silently kill all
# the others for the GUI's lifetime (grill X6). Only the `FutureExt`
# shape we need; the umbrella `futures` crate would pull in extra
# subcrates we don't use.
futures-util.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri-plugin-mcp-bridge = "0.11"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
# D-5/6/7: Rust-side clipboard write for `key_*_copy`. The raw secret
# never returns to JS — the renderer only sees a `KeyCopyReceiptDto`
# (label + preview + clear-deadline). Self-clear after 30s is also
# scheduled in Rust so the policy lives next to the write.
tauri-plugin-clipboard-manager = "2.3"
# Auto-update pipeline (Settings → About). Minisign-signed bundles are
# verified at runtime against the pubkey embedded in tauri.conf.json;
# the signing key is only available in CI via TAURI_SIGNING_PRIVATE_KEY.
# `process` ships the `relaunch` IPC the renderer uses after install.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
zeroize.workspace = true
dirs = { workspace = true }
notify.workspace = true
notify-debouncer-mini.workspace = true
# Memory-watch fingerprint comparison (`memory_watch.rs`). sha256 is
# good enough for content-equality dedup; mirrors what `memory_log`
# stores so a process restart can reuse persisted hashes.
sha2.workspace = true
hex.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# Override the macOS Dock icon at runtime via NSApplication's
# `setApplicationIconImage`. macOS Dock renders at 96px (48pt × 2)
# at default size — which isn't a layer in the .icns format. The
# default render path picks the 128 layer and downscales with
# bilinear filtering, softening pixel-art edges. Routing the icon
# through Cocoa's NSImage pipeline with our 512x512 PNG source
# lets Lanczos handle the downsample, preserving crispness at any
# Dock size. See `dock_icon.rs`.
objc2 = "0.6"
# NSApplication + NSImage: dock_icon.rs overrides the dock icon.
# NSWindow + NSResponder + NSView + NSButton + NSControl: traffic_light.rs
# reads `standardWindowButton(.closeButton).frame` for runtime intro
# of the traffic-light row's position.
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSImage",
    "NSWindow",
    "NSResponder",
    "NSView",
    "NSButton",
    "NSControl",
] }
# NSData: dock_icon.rs decodes the embedded PNG.
# NSGeometry: traffic_light.rs reads NSRect / NSPoint / NSSize.
objc2-foundation = { version = "0.3", features = ["NSData", "NSGeometry"] }

[dev-dependencies]
tempfile.workspace = true
