[package]
name = "claudepot-cli"
description = "CLI for Claudepot — multi-account Claude Code/Desktop switcher"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "claudepot"
path = "src/main.rs"

[dev-dependencies]
tempfile.workspace = true

[dependencies]
claudepot-core = { path = "../claudepot-core" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
dirs.workspace = true
keyring.workspace = true
