[package]
name = "claudepot-cli"
description = "CLI for Claudepot — multi-account Claude Code/Desktop switcher"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "claudepot"
path = "src/main.rs"

[dev-dependencies]
tempfile.workspace = true

[dependencies]
claudepot-core = { path = "../claudepot-core" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
dirs.workspace = true
keyring.workspace = true

# WI-008 — Claudepot MCP memory server. Binary-only on the CLI;
# claudepot-core stays free of the ~30-dep rmcp tree. Per the spike
# verdict at dev-docs/reports/rmcp-spike-2026-05-15.md. rmcp
# re-exports schemars so we don't need it as a direct dep.
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
