[package]
name = "claudepot-core"
description = "Core business logic for Claudepot — account switching, usage, refresh"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true
filetime.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
dirs.workspace = true
sysinfo.workspace = true
libc.workspace = true
async-trait.workspace = true
whoami.workspace = true
unicode-normalization.workspace = true
rayon.workspace = true
num_cpus.workspace = true
