[package]
name = "claudepot-core"
description = "Core business logic for Claudepot — account switching, usage, refresh"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
globset.workspace = true
lettre.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true
filetime.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
keyring.workspace = true
tracing.workspace = true
uuid.workspace = true
dirs.workspace = true
sysinfo.workspace = true
libc.workspace = true
async-trait.workspace = true
whoami.workspace = true
unicode-normalization.workspace = true
rayon.workspace = true
num_cpus.workspace = true
regex.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
similar.workspace = true

# Desktop-identity crypto (Phase 2 of desktop overhaul).
# See Cargo.toml workspace comment for the full algorithm rationale.
base64.workspace = true
aes.workspace = true
fs2.workspace = true
trash.workspace = true
same-file.workspace = true
tar.workspace = true
zstd.workspace = true
age.workspace = true
minisign.workspace = true
minisign-verify.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
pbkdf2.workspace = true
hmac.workspace = true
sha1.workspace = true
cbc.workspace = true
system-configuration.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
aes-gcm.workspace = true
windows-sys.workspace = true
