[package]
name = "claudepot-core"
description = "Core business logic for Claudepot — account switching, usage, refresh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
globset.workspace = true
lettre = { workspace = true, optional = true }
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true
filetime.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
keyring.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
uuid.workspace = true
dirs.workspace = true
portable-pty.workspace = true
sysinfo.workspace = true
libc.workspace = true
async-trait.workspace = true
whoami.workspace = true
unicode-normalization.workspace = true
unicode-segmentation.workspace = true
rayon.workspace = true
num_cpus.workspace = true
regex.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
similar.workspace = true
# Secret scrubbing for routes::lifecycle (commit_secrets moved here
# from src-tauri so the keychain-rotation rollback matrix is
# unit-testable; String's deallocator does not scrub).
zeroize.workspace = true

# Desktop-identity crypto (Phase 2 of desktop overhaul).
# See Cargo.toml workspace comment for the full algorithm rationale.
base64.workspace = true
aes.workspace = true
trash.workspace = true
same-file.workspace = true
tar.workspace = true
zstd.workspace = true
age.workspace = true
minisign.workspace = true
minisign-verify.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
pbkdf2.workspace = true
hmac.workspace = true
sha1.workspace = true
cbc.workspace = true
system-configuration.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
aes-gcm.workspace = true
windows-sys.workspace = true

[features]
# The caregiver templates bundle (templates::caregiver — consent
# store, SMTP delivery, report rendering) is built and E2E-tested but
# not yet wired into the shipped agent runtime, so production builds
# (claudepot-cli, claudepot-tauri) exclude it and the lettre SMTP
# stack it pulls in. The self-dev-dependency below turns it on for
# this crate's own test builds, so `cargo test --workspace` keeps
# compiling and running the caregiver unit + E2E suites on CI.
caregiver = ["dep:lettre"]

[dev-dependencies]
claudepot-core = { path = ".", features = ["caregiver"] }
